--- a/kenkenplus/kenken.css
+++ b/kenkenplus/kenken.css
@@ -49,12 +49,13 @@ hr {
 }
 
 #digits {
-    width: 450px;
+    width: 500px;
     height: 50px;
 
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    position: relative;
 }
 
 .number {
@@ -72,7 +73,7 @@ hr {
 }
 
 #buttons {
-    width: 450px;
+    width: 500px;
     height: 50px;
 
     margin: 0 auto;
