--- a/kenkenplus/kenken.css
+++ b/kenkenplus/kenken.css
@@ -192,3 +192,10 @@ hr {
     background-color: rgb(232, 107, 107);
 }
 
+.digit { 
+    font-size: 30px; 
+} 
+  
+.txt { 
+    font-size: 30px; 
+} 
