--- a/puzzler/kenken.css
+++ b/puzzler/kenken.css
@@ -89,7 +89,6 @@ hr {
 
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
 }
 
 .submit {
@@ -98,6 +97,21 @@ hr {
     border: 1px solid black;
     margin: 2px;
     background-color:white;
+
+    /* Text */
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.new_game {
+    width: 120px;
+    height: 50px;
+    border: 1px solid black;
+    margin: 2px;
+    background-color:green;
 
     /* Text */
     font-size: 20px;
@@ -141,6 +155,25 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.reset {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    margin: 2px;
+    background-color: white;
+
+    /* Text */
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reset-hovered {
+    background-color: rgb(221,221,221);
 }
 
 .number-selected {
