--- a/puzzler/index.css
+++ b/puzzler/index.css
@@ -15,3 +15,7 @@ hr {
     background-color: #4CAF50; /* Green */
     color: white;
   }
+
+.bottom {
+    font-family: Arial, Helvetica, sans-serif;
+}
