--- a/puzzler/kenken.css
+++ b/puzzler/kenken.css
@@ -172,6 +172,21 @@ img {
     align-items: center;
 }
 
+.reset {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    margin: 2px;
+    background-color: white;
+
+    /* Text */
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .reset-hovered {
     background-color: rgb(221,221,221);
 }
